MA-9: add form & store handlers

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div>initial</div>
 <!-- TODO: remove it -->
 <a routerLink="register"> register </a>
+<a routerLink="login"> login </a>
 <router-outlet></router-outlet>
