MA-10: add topBar layout
* change links location ( now is share )

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<div>initial</div>
-<!-- TODO: remove it -->
-<a routerLink="register"> register </a>
-<a routerLink="login"> login </a>
+<ma-topBar></ma-topBar>
 <router-outlet></router-outlet>
