MA-11: add layout for feeds

--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -1,1 +1,38 @@
-<p>feed</p>
+<!-- TODO: add loader -->
+<div *ngIf="isLoading$ | async">Loading...</div>
+<!-- TODO: add error -->
+<div *ngIf="error$ | async">Some error happened</div>
+
+<!-- TODO: add block on empty feed -->
+<ng-container *ngIf="!!(feed$ | async)">
+  <article
+    *ngFor="let article of (feed$ | async).articles"
+    class="article-preview"
+  >
+    <div class="article-meta">
+      <a [routerLink]="['/', HttpLinks.Profiles, article.author.username]">
+        <img [src]="article.author.image" />
+      </a>
+      <div class="info">
+        <a [routerLink]="['/', HttpLinks.Profiles, article.author.username]">
+          {{ article.author.username }}
+        </a>
+        <span class="date">{{ article.createdAt | date }}</span>
+      </div>
+      <div class="pull-xs-right">
+        <!-- TODO: implement -->
+        ADD TO FAVORITES
+      </div>
+    </div>
+    <a [routerLink]="['/', HttpLinks.Posts, article.slug]" class="preview-link">
+      <h1>{{ article.title }}</h1>
+      <p>{{ article.description }}</p>
+      <div class="pull-xs-right">
+        <!-- TODO: implement -->
+        HERE IS LIST OF TAGS
+      </div>
+    </a>
+  </article>
+  <!-- TODO: implement -->
+  PAGINATION IS HERE
+</ng-container>
