--- a/src/app/globalFeed/components/globalFeed/globalFeed.component.html
+++ b/src/app/globalFeed/components/globalFeed/globalFeed.component.html
@@ -1,3 +1,17 @@
-<p>globalFeed</p>
-
-<ma-feed></ma-feed>
+<div class="home-page">
+  <!-- TODO: implement -->
+  BANNER
+  <div class="container page">
+    <div class="row">
+      <div class="col-md-9">
+        <!-- TODO: implement -->
+        FEED TOGGLER
+        <ma-feed [apiUrl]="StoreEndpoints.ALL_FEEDS"></ma-feed>
+      </div>
+      <div class="col-md-3">
+        <!-- TODO: implement -->
+        POPULAR TAGS IS HERE
+      </div>
+    </div>
+  </div>
+</div>
