MA-12: add banner shared module

--- a/src/app/globalFeed/components/globalFeed/globalFeed.component.html
+++ b/src/app/globalFeed/components/globalFeed/globalFeed.component.html
@@ -1,6 +1,5 @@
 <div class="home-page">
-  <!-- TODO: implement -->
-  BANNER
+  <ma-banner></ma-banner>
   <div class="container page">
     <div class="row">
       <div class="col-md-9">
