MA-12: add pagination shared module

--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -33,8 +33,10 @@
         </div>
       </a>
     </article>
-    <!-- TODO: implement -->
-    PAGINATION IS HERE
+    <ma-pagination
+      [total]="(feed$ | async).articlesCount"
+      [currentPage]="currentPage$ | async"
+    ></ma-pagination>
   </ng-container>
 
   <ng-template #emptyFeed>
