MA-14: add feedToggler shared module

--- a/src/app/globalFeed/components/globalFeed/globalFeed.component.html
+++ b/src/app/globalFeed/components/globalFeed/globalFeed.component.html
@@ -4,8 +4,7 @@
   <div class="container page">
     <div class="row">
       <div class="col-md-9">
-        <!-- TODO: implement -->
-        FEED TOGGLER
+        <ma-feed-toggler></ma-feed-toggler>
         <ma-feed [apiUrl]="StoreEndpoints.ALL_FEEDS"></ma-feed>
       </div>
 
