--- a/src/app/shared/modules/feedToggler/components/feedToggler/feedToggler.component.html
+++ b/src/app/shared/modules/feedToggler/components/feedToggler/feedToggler.component.html
@@ -11,7 +11,7 @@
     </li>
 
     <li class="nav-item">
-      <a [routerLink]="['/']" routerLinkActive="active" class="nav-link">
+      <a [routerLink]="['/']" routerLinkActiveWithoutQuery="/" class="nav-link">
         Global Feed
       </a>
     </li>
