--- a/src/app/shared/modules/tagList/components/tagList/tagList.component.html
+++ b/src/app/shared/modules/tagList/components/tagList/tagList.component.html
@@ -1,5 +1,11 @@
 <ul class="tag-list">
-  <li *ngFor="let tag of tagsProps" class="tag-default tag-pill tag-outline">
-    {{ tag }}
+  <li *ngFor="let tag of tagsProps">
+    <a
+      [routerLink]="['/', HttpLinks.Tags, tag]"
+      [ngClass]="{ 'tag-outline': (currentRouteTag$ | async) !== tag }"
+      class="tag-default tag-pill"
+    >
+      {{ tag }}
+    </a>
   </li>
 </ul>
