--- a/src/app/shared/modules/topBar/components/topBar/topBar.component.html
+++ b/src/app/shared/modules/topBar/components/topBar/topBar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar navbar-container">
   <section class="container">
     <a [routerLink]="[HttpLinks.Home]" class="navbar-brand">{{
       brand | uppercase
