--- a/src/app/shared/modules/articleForm/components/articleForm/articleForm.component.html
+++ b/src/app/shared/modules/articleForm/components/articleForm/articleForm.component.html
@@ -3,8 +3,8 @@
     <div class="row">
       <div class="col-md-10 offset-md-1 col-xs-12">
         <ma-error-messages
-          *ngIf="!!errorsMapProps"
-          [errorMessages]="errorsMapProps"
+          *ngIf="!!(errors$ | async)"
+          [errorMessages]="errors$ | async"
         ></ma-error-messages>
 
         <form [formGroup]="form" (ngSubmit)="onFormSubmit()">
@@ -43,7 +43,7 @@
             </fieldset>
             <button
               type="submit"
-              [disabled]="!!errorsMapProps || isSubmittingProps"
+              [disabled]="!!(errors$ | async) || isSubmittingProps"
               class="btn btn-lg pull-xs-right btn-primary"
             >
               Publish Post
